examples/test/testpolicy12835.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12835
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key7: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value1
          key46: value12
          key37: value27
      podSelector:
        matchLabels:
          key15: value22
          key38: value16
